Stephen #1183 - Fix for css for mobile text align on IE

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_group.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_group.scss
@@ -399,7 +399,7 @@
                     width: 61px;
                     display: inline-table;
                     margin-right: 5px;
-                    height: 100%;
+                    height: 70%;
                     text-align: center;
 
                     i {
@@ -407,10 +407,17 @@
                         background-color: $white;
 
                         @media #{$mobile, $tablet} {
-                            padding: 0px 10px 7px 10px;
                             display: table-cell;
                             margin-left: 0;
                             vertical-align: middle;
+                        }
+
+                        @media #{$tablet} {
+                            padding: 0px 10px 7px 10px;
+                        }
+
+                        @media #{$mobile} {
+                            padding: 20px 10px 0 10px;
                         }
                     }
                 }
